<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Boilr</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="alarm_settings">Alarm Settings</string>
    <string name="add_alarm">Add alarm</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="boilr_settings">Boilr Settings</string>
    <string name="about_title">About Boilr</string>
    <string name="about_website_button">Website</string>
    <string name="ok">OK</string>
    <string name="about_license">Released under the GNU GPLv3 license.</string>
    <string name="about_website">Website: </string>
    <string name="about_version">Version: </string>
    <string name="about_developers">Developers: </string>
    <string name="about_concept">Concept and Design: </string>
    <string name="about_donations">Donations:</string>
    <string name="about_btc">BTC: </string>
    <string name="about_xmr">XMR: </string>
    <string name="andre_filipe_santos"><a href="https://github.com/andrefbsantos">André Filipe Santos</a></string>
    <string name="david_ludovino"><a href="https://github.com/dllud">David Ludovino</a></string>
    <string name="ricardo_duarte"><a href="http://cargocollective.com/ricardoduarte">Ricardo Duarte</a></string>
    <string name="boilr_website">http://boilr.mobi</string>
    <string name="btc_addr"><a href="bitcoin:1PHuSWfuAwR6oz9qV93rTdMVozfM85Qqxx">1PHuSWfuAwR6oz9qV93rTdMVozfM85Qqxx</a></string>
    <string name="btc_link">bitcoin:1PHuSWfuAwR6oz9qV93rTdMVozfM85Qqxx</string>
    <string name="xmr_addr">43KcTwXw5D43YRE8MSG4D7X3S2kjU6ehBABucyKAVNYnKbNxpGWZ8zGbEhCq79N4ZGDtefU5w4AGoeR6eNB5yMbEPhAw3FT</string>
    
    <string name="pref_title_alerts">Alerts</string>
    <string name="pref_title_default_alert_type">Default type</string>
    <string-array name="pref_entries_alert_type">
        <item>Alarm</item>
        <item>Notification</item>
        <item>Ringtone</item>
    </string-array>
    <string-array name="pref_values_alert_type">
        <item>4</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string name="pref_default_alert_type">4</string>
    <string name="pref_title_default_alert_sound">Default sound</string>
    <string name="pref_title_vibrate_default">Vibrate by default</string>
    <string name="pref_title_appearance">Appearance</string>
    <string name="pref_title_theme">Theme</string>
    <string-array name="pref_entries_theme">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="pref_values_theme">
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string name="pref_default_theme">dark</string>
    <string name="pref_title_network_usage">Network usage</string>
    <string name="pref_title_mobile_data">Mobile data</string>
    <string name="pref_title_default_update_interval_hit">Hit alarm default update interval</string>
    <string name="pref_summary_default_update_interval_hit">In seconds. Defines how often a price hit alarm gets data from the exchange. You can set another interval for a particular alarm on its settings.</string>
    <string name="pref_title_default_update_interval_change">Change alarm default time frame</string>
    <string name="pref_summary_default_update_interval_change">In minutes. Defines the default time frame for price change alarms. You can set another time frame for a particular alarm on its settings.</string>
    <string name="pref_title_check_pairs_interval">Check for new pairs</string>
    <string-array name="pref_entries_check_pairs_interval">
        <item>Hourly</item>
        <item>Twice a day</item>
        <item>Daily</item>
        <item>Every other day</item>
        <item>Weekly</item>
        <item>Fortnightly</item>
    </string-array>
    <string-array name="pref_values_check_pairs_interval">
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item> <!-- 24 hours * 60 minutes * 60 seconds * 1000 milis -->
        <item>172800000</item>
        <item>604800000</item>
        <item>1209600000</item>
    </string-array>
    <string name="pref_default_check_pairs_interval">604800000</string>
    
    <string name="pref_type_title">Alarm type</string>
    <string-array name="pref_type_entries">
        <item>Price hit</item>
        <item>Price change</item>
    </string-array>
    <string-array name="pref_type_entries_values">
        <item>price_hit</item>
        <item>price_change</item>
    </string-array>
    <string name="pref_type_default">price_hit</string>
    <string name="pref_exchange_title">Exchange</string>
    <string-array name="pref_exchange_entries">
        <item>Allcoin</item>
        <item>Bitcoin.de</item>
        <item>Bitstamp</item>
        <item>Bittrex</item>
        <item>BleuTrade</item>
        <item>BTC38</item>
        <item>BTCChina</item>
        <item>BTC-E</item>
        <item>BTER</item>
        <item>BullionVault</item>        
        <item>Cavirtex</item>
        <item>Cryptsy</item>
        <item>HitBTC</item>
        <item>Huobi</item>
        <item>Kraken</item>
        <item>LocalBitcoins</item>
        <item>MintPal</item>
        <item>OKCoin</item>
        <item>Poloniex</item>
        <item>VoS</item>
    </string-array>
    <string-array name="pref_exchange_entries_values">
        <item>mobi.boilr.libdynticker.allcoin.AllcoinExchange</item>
        <item>mobi.boilr.libdynticker.bitcoinde.Bitcoinde</item>
        <item>mobi.boilr.libdynticker.bitstamp.BitstampExchange</item>
        <item>mobi.boilr.libdynticker.bittrex.BittrexExchange</item>
        <item>mobi.boilr.libdynticker.bleutrade.BleuTradeExchange</item>
        <item>mobi.boilr.libdynticker.btc38.BTC38Exchange</item>
        <item>mobi.boilr.libdynticker.btcchina.BTCChinaExchange</item>
        <item>mobi.boilr.libdynticker.btce.BTCEExchange</item>
        <item>mobi.boilr.libdynticker.bter.BTERExchange</item>
        <item>mobi.boilr.libdynticker.bullionvault.BullionVaultExchange</item>
        <item>mobi.boilr.libdynticker.cavirtex.CavirtexExchange</item>
        <item>mobi.boilr.libdynticker.cryptsy.CryptsyExchange</item>
        <item>mobi.boilr.libdynticker.hitbtc.HitBTCExchange</item>
        <item>mobi.boilr.libdynticker.houbi.HuobiExchange</item>
        <item>mobi.boilr.libdynticker.kraken.KrakenExchange</item>
        <item>mobi.boilr.libdynticker.localbitcoins.LocalBitcoins</item>
        <item>mobi.boilr.libdynticker.mintpal.MintPalExchange</item>
        <item>mobi.boilr.libdynticker.okcoin.OKCoinExchange</item>
        <item>mobi.boilr.libdynticker.poloniex.PoloniexExchange</item>
        <item>mobi.boilr.libdynticker.vos.VoSExchange</item>
    </string-array>
    <string name="pref_exchange_default">mobi.boilr.libdynticker.allcoin.AllcoinExchange</string>
    <string name="pref_pair_title">Pair</string>
    <string name="action_send_now">Save</string>
    <string name="pref_title_alarm_alert_type">Alert type</string>
    <string name="pref_title_alarm_alert_sound">Sound</string>
    <string name="pref_title_alarm_vibrate">Vibrate</string>
    <string name="pref_title_generic">Generic</string>
    <string name="pref_title_specific">Specific</string>
    <string name="pref_title_upper_bound">Upper bound</string>
    <string name="pref_title_lower_bound">Lower bound</string>
    <string name="pref_title_change_in_percentage">Change in percentage</string>
    <string name="pref_title_change_value">Change</string>
    <string name="pref_title_update_interval">Update interval</string>
    <string name="pref_title_time_frame">Time frame</string>
    <string name="pref_title_last_value">Last value</string>
    <string name="pref_summary_update_interval_hit">In seconds. Defines how often the hit alarm gets data from the exchange.</string>
    <string name="pref_summary_update_interval_change">In minutes. Defines the time frame for the price change alarm.</string>
    
    <string name="boilr_alarm">Boilr Alarm</string>
    <string name="turn_off">Turn off</string>
    <string name="keep_monitoring">Keep monitoring</string>
    <string name="no_internet">Boilr has no internet</string>
    <string name="no_updates">Your alarms cannot be updated.</string>
    
    <string name="couldnt_retrieve_pairs">Could not retrieve pairs for %1$s.</string>
    <string name="couldnt_retrieve_last_value">Could not retrieve last value for %1$s with pair %2$s.</string>
    <string name="failed_create_alarm">Failed to create alarm.</string>
    <string name="cannot_set_bound">Cannot set bound.</string>
    <string name="check_connection">Please check your internet connection.</string>
    <string name="not_bound">%1$s not bound to StorageAndControlService.</string>
    <string name="pair_search_description">Pair Search</string>
</resources>