<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="generic"
        android:title="@string/pref_title_alerts" >
        <ListPreference
            android:defaultValue="@string/pref_exchange_default"
            android:dialogTitle="@string/pref_exchange_dialog_title"
            android:entries="@array/pref_exchange_entries"
            android:entryValues="@array/pref_exchange_entries_values"
            android:key="exchange"
            android:title="@string/pref_exchange_title" />
        <ListPreference
            android:dialogTitle="@string/pref_pair_dialog_title"
            android:key="pair"
            android:title="@string/pref_pair_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="specific"
        android:title="Specific" >
    </PreferenceCategory>
    <PreferenceCategory
        android:key="alert"
        android:title="@string/pref_title_alerts" >
        <ListPreference
            android:defaultValue="@string/pref_default_alert_type"
            android:dialogTitle="@string/pref_title_alarm_alert_type"
            android:entries="@array/pref_entries_alert_type"
            android:entryValues="@array/pref_values_alert_type"
            android:key="pref_key_alarm_alert_type"
            android:title="@string/pref_title_alarm_alert_type" />

        <RingtonePreference
            android:defaultValue="content://settings/system/alarm_alert"
            android:key="pref_key_alarm_alert_sound"
            android:ringtoneType="alarm"
            android:showDefault="false"
            android:showSilent="true"
            android:title="@string/pref_title_alarm_alert_sound" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_alarm_vibrate"
            android:title="@string/pref_title_alarm_vibrate" />
    </PreferenceCategory>

</PreferenceScreen>